--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: #FFFFFF;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,16 +15,15 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #dc9333;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #dc9333;
 }
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
